# synarius-studio

./: .editorconfig  .gitignore  CLA.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.txt  README.md  SECURITY.md  main.py  pyproject.toml  pyrightconfig.json  run_studio.py  synarius_studio.spec  synarius_studio_onedir.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci.yml  cla.yml  docs.yml  pyinstaller-smoke.yml  release.yml
docs/: build-windows.md  conf.py  index.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  schema_violations.json  search.html  searchindex.js  strategic_vision.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  strategic_vision.doctree
docs/_build/html/.doctrees/requirements/: architecture.doctree  index.doctree  system.doctree
docs/_build/html/.doctrees/requirements/components/: data_viewer.doctree  editor.doctree  graphical_elements.doctree  gui.doctree  index.doctree  overview.doctree  visualization.doctree
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/requirements/: architecture.rst.txt  index.rst.txt  system.rst.txt
docs/_build/html/_sources/requirements/components/: gui.rst.txt  index.rst.txt  overview.rst.txt  visualization.rst.txt
docs/_build/html/requirements/: architecture.html  index.html  system.html
docs/_build/html/requirements/components/: data_viewer.html  editor.html  graphical_elements.html  gui.html  index.html  overview.html  visualization.html
docs/_build/html_check_strategic/: .buildinfo  genindex.html  index.html  objects.inv  schema_violations.json  searchindex.js  strategic_vision.html
docs/_build/html_check_strategic/.doctrees/: environment.pickle  index.doctree  strategic_vision.doctree
docs/_build/html_check_strategic/.doctrees/requirements/: architecture.doctree
docs/_build/html_check_strategic/.doctrees/requirements/components/: graphical_elements.doctree  gui.doctree  index.doctree
docs/_build/html_check_strategic/_sources/: strategic_vision.rst.txt
docs/_build/html_check_strategic/_sources/requirements/components/: index.rst.txt
docs/_build/html_check_strategic/requirements/: architecture.html  index.html  system.html
docs/_build/html_check_strategic/requirements/components/: data_viewer.html  gui.html  index.html
docs/_build/html_verify/: .buildinfo  index.html  objects.inv  schema_violations.json  search.html  searchindex.js
docs/_build/html_verify/.doctrees/: environment.pickle  index.doctree
docs/_build/html_verify/.doctrees/requirements/: architecture.doctree
docs/_build/html_verify/.doctrees/requirements/components/: graphical_elements.doctree  overview.doctree
docs/_build/html_verify/_sources/requirements/components/: data_viewer.rst.txt  graphical_elements.rst.txt  gui.rst.txt  index.rst.txt
docs/_build/html_verify/requirements/: architecture.html  index.html  system.html
docs/_build/html_verify/requirements/components/: data_viewer.html  graphical_elements.html  gui.html  index.html  overview.html
docs/developer/: connector_rendering.rst  index.rst
docs/requirements/: architecture.rst  system.rst
docs/requirements/components/: data_viewer.rst  editor.rst  graphical_elements_uml.puml  gui.rst  overview.rst  visualization.rst
scripts/: trigger_github_release.py  zoom_example.py
src/synarius_studio/: __init__.py  __main__.py  _version.py  app.py  app_logging.py  bootstrap_paths.py  code_view.py  dataviewer_select_dialog.py  experiment_codegen.py  fmu_import_dialog.py  log_emitter.py  main_window.py  parameters_tab_panel.py  qt_log_handler.py  resource_paths.py  resources_panel.py  simulation_step_count_field.py  standard_library.py  stimulation_dialog.py  studio_paths.py  svg_icons.py  theme.py  variables_tab_panel.py
src/synarius_studio/diagram/: __init__.py  connector_interactive.py  dataflow_canvas.py  dataflow_items.py  dataflow_layout.py  diagram_scene.py  placement_interactive.py
src/synarius_studio/icons/: BREEZE_ICONS_NOTICE.txt
src/synarius_studio/resources/: __init__.py  example_experiment.syn  example_fmu.syn  example_lib_vs_canvas_add.syn  example_maps_curves.syn  example_modelling.syn  kenngroessen_demo.syn  kenngroessen_nullen.dcm  kenngroessen_poly3.dcm  test.syn
tests/: conftest.py  test_dataflow_layout.py  test_dataviewer_open_widget.py  test_fmu_import_dialog.py  test_recording_export.py  test_recording_integration.py  test_resources_panel.py  test_run_loop_worker_time.py  test_smoke.py  test_studio_small_modules.py  test_theme_and_paths.py
