[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synarius-studio"
version = "0.0.36"
description = "PySide6 GUI for Synarius."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "Synarius Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dependencies = [
  "PySide6>=6.0.0",
  "platformdirs>=4.0.0",
  # Shared file logging / excepthook / Qt message handler (sibling: pip install -e ../synarius-apps).
  "synarius-apps @ git+https://github.com/synarius-project/synarius-apps.git",
  # Parameters repository (synarius_core.parameters) uses DuckDB; pin here so Studio venv
  # always has it even if the pinned synarius-core git revision predates this dependency.
  "duckdb>=1.5.1",
  # Core re-exports synarius_core.io (timeseries); that optional extra pulls numpy/pandas/pyarrow/asammdf.
  # Must match synarius-apps’ synarius-core pin (pip cannot install two git revs of one name).
  "synarius-core[timeseries,fmu] @ git+https://github.com/synarius-project/synarius-core.git@2037d854ce4f00b46200d92af1728267248af3ee",
]

[project.scripts]
run-synarius-studio = "synarius_studio.__main__:main"

[project.urls]
Homepage = "https://example.invalid/synarius-studio"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["synarius_studio*"]

[tool.setuptools.package-data]
synarius_studio = ["resources/*.syn", "diagram/svg/*.svg", "icons/*"]

# Local monorepo: synarius-core lives next to synarius-studio. Pylance/Pyright need this
# to resolve `synarius_core.*` when the sibling package is not installed in the venv.
[tool.pyright]
extraPaths = ["../synarius-core/src", "../synarius-apps/src"]

[project.optional-dependencies]
dev = []
docs = [
  "sphinx",
  "sphinx-needs",
  "zerovm-sphinx-theme",
]

